--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,13 @@ android {
 }
 
 dependencies {
+    def phraseVersion = "3.3.0"
     def composeBom = platform('androidx.compose:compose-bom:2023.06.01')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.github.phrase:android-sdk:3.2.5'
+    implementation "com.github.phrase:android-sdk:$phraseVersion"
     implementation composeBom
     implementation 'androidx.compose.material:material'
 
