--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,13 +41,14 @@ android {
 }
 
 dependencies {
-    def phraseVersion = "3.3.0"
+    def phraseVersion = "3.3.2"
     def composeBom = platform('androidx.compose:compose-bom:2023.06.01')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "com.github.phrase:android-sdk:$phraseVersion"
+    implementation "com.github.phrase.android-sdk:android-sdk-compose:$phraseVersion"
     implementation composeBom
     implementation 'androidx.compose.material:material'
 
